--- a/nodejs-blog/package.json
+++ b/nodejs-blog/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "express": "^4.16.4",
+    "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
     "mongoose": "^5.4.19",
     "pug": "^2.0.3"
