--- a/nodejs-blog/package.json
+++ b/nodejs-blog/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
     "mongoose": "^5.4.19",
+    "node": "^11.13.0",
     "pug": "^2.0.3"
   },
   "devDependencies": {
