--- a/nodejs-blog/package.json
+++ b/nodejs-blog/package.json
@@ -19,6 +19,8 @@
     "express-validator": "^5.3.1",
     "mongoose": "^5.4.19",
     "node": "^11.13.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.3"
   },
   "devDependencies": {
