--- a/nodejs-blog/package.json
+++ b/nodejs-blog/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^2.1.1",
     "express": "^4.16.4",
     "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
